<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="450dp"
    android:layout_height="475dp"
    android:layout_gravity="center"
    android:background="#f69e7b"
    android:orientation="vertical">

    <Button
        android:id="@+id/btnSave"
        android:layout_width="132dp"
        android:layout_height="73dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="47dp"
        android:layout_marginTop="370dp"
        android:layout_marginEnd="272dp"
        android:background="@drawable/bg_side_btn"
        android:text="@string/btn_save"
        android:theme="@style/SideBarLayout" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="132dp"
        android:layout_height="73dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="259dp"
        android:layout_marginTop="371dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/bg_side_btn"
        android:text="@string/btn_cancel"
        android:theme="@style/SideBarLayout" />


    <EditText
        android:id="@+id/editTextF1"
        android:layout_width="351dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewF1Static"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="38dp"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="8dp"
        android:hint="@string/enter_text_hereF1" />

    <EditText
        android:id="@+id/editTextF2"
        android:layout_width="351dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewF2Static"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="38dp"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="8dp"
        android:hint="@string/enter_text_hereF2" />

    <TextView
        android:id="@+id/textViewF1Static"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="41dp"
        android:layout_marginTop="41dp"
        android:text="F1:"
        android:textSize="36dp" />


    <TextView
        android:id="@+id/textViewF2Static"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="39dp"
        android:layout_marginTop="181dp"
        android:text="F2:"
        android:textSize="36dp" />

    <TextView
        android:id="@+id/textViewF2Old"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="182dp"
        android:layout_toEndOf="@+id/textViewF2Static"
        android:text="@string/textView_F2Old"
        android:textSize="36dp" />

    <TextView
        android:id="@+id/textViewF1Old"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="23dp"
        android:layout_marginTop="41dp"
        android:layout_toEndOf="@+id/textViewF1Static"
        android:text="@string/textView_F1Old"
        android:textSize="36dp" />

</RelativeLayout>