<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/btToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_centerHorizontal="true"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        android:background="@color/colorBTNotConnected">
        <TextView
            android:id="@+id/bluetoothTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/bluetoothDefault"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            android:visibility="visible" />
    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tablayout"
        app:tabGravity="fill"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:fontFamily="sans-serif-light"
        app:tabTextAppearance="@style/TabLayoutTextStyle"
        app:tabInlineLabel="true"
        android:background="#eedad1">
    >

        <com.google.android.material.tabs.TabItem
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/Tab1"
            android:text="@string/tab_MapText"
            />

        <com.google.android.material.tabs.TabItem
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/Tab2"
            android:text="@string/tab_BTText"
            />

        <com.google.android.material.tabs.TabItem
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/Tab3"
            android:text="@string/tab_CommText"
            />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </androidx.viewpager.widget.ViewPager>

</LinearLayout>