<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#383e56"
    tools:context=".MapTab">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="290dp"
        android:background="@drawable/bg_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/calFront"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/bg_com_btn"
            android:text="Cali-Start"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnBottom"
            app:layout_constraintHorizontal_bias="0.75"
            app:layout_constraintStart_toEndOf="@+id/constraintLayout2"
            app:layout_constraintTop_toBottomOf="@+id/btnLeft"
            app:layout_constraintVertical_bias="0.75" />

        <Button
            android:id="@+id/calFront2"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_com_btn"
            android:text="Cali-Dist"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/calRight"
            app:layout_constraintStart_toEndOf="@+id/calFront"
            app:layout_constraintTop_toBottomOf="@+id/btnBottom" />

        <Button
            android:id="@+id/calRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/bg_com_btn"
            android:text="Cali-Angle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/constraintLayout"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/btnBottom"
            app:layout_constraintTop_toBottomOf="@+id/btnRight"
            app:layout_constraintVertical_bias="0.864" />

        <ImageButton
            android:id="@+id/btnUpdateMap"
            android:layout_width="30dip"
            android:layout_height="30dip"
            android:layout_marginStart="116dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="205dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/btn_update"
            android:scaleType="fitXY"
            android:src="@drawable/reload"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/constraintLayout"
            app:layout_constraintStart_toEndOf="@+id/btnTop"
            app:layout_constraintTop_toBottomOf="@+id/autoSwitch" />

        <ImageButton
            android:id="@+id/btnLeft"
            android:layout_width="80dip"
            android:layout_height="80dip"
            android:layout_marginStart="180dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/btn_left"
            android:scaleType="fitXY"
            android:src="@drawable/leftbtn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.38" />

        <ImageButton
            android:id="@+id/btnBottom"
            android:layout_width="80dip"
            android:layout_height="80dip"
            android:layout_marginBottom="60dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/btn_down"
            android:scaleType="fitXY"
            android:src="@drawable/downbtn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnTop"
            app:layout_constraintVertical_bias="0.84000003" />

        <ImageButton
            android:id="@+id/btnRight"
            android:layout_width="80dip"
            android:layout_height="80dip"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="180dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/btn_right"
            android:scaleType="fitXY"
            android:src="@drawable/rightbtn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageButton
            android:id="@+id/btnTop"
            android:layout_width="80dip"
            android:layout_height="80dip"
            android:layout_marginTop="16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/btn_up"
            android:scaleType="fitXY"
            android:src="@drawable/upbtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Switch
            android:id="@+id/autoSwitch"
            android:layout_width="100dp"
            android:layout_height="46dp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="71dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="51dp"
            android:checked="true"
            android:gravity="center"
            android:text="@string/btn_switch"
            android:textColor="#000"
            android:textOff="@string/btn_switchOff"
            android:textOn="@string/btn_switchOn"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/btnRight"
            app:layout_constraintEnd_toStartOf="@+id/constraintLayout"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/btnTop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="100dp"
            android:layout_height="290dp"
            android:background="@drawable/bg_menu_right"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <Button
                android:id="@+id/startbtn"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/bg_side_btn"
                android:text="@string/btn_start"
                android:theme="@style/SideBarLayout"
                app:layout_constraintBottom_toTopOf="@+id/explorebtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/explorebtn"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="104dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="107dp"
                android:background="@drawable/bg_side_btn"
                android:text="@string/btn_explore"
                android:theme="@style/SideBarLayout"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/resetbtn"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="17dp"
                android:background="@drawable/bg_side_btn"
                android:text="@string/btn_reset"
                android:theme="@style/SideBarLayout"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/explorebtn"
                app:layout_constraintVertical_bias="1.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="100dp"
            android:layout_height="290dp"
            android:background="@drawable/bg_menu_left"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ToggleButton
                android:id="@+id/tiltbtn"
                style="@style/Widget.AppCompat.Button.Colored"
                android:textOff="@string/btn_tilt_off"
                android:textOn="@string/btn_tilt_on"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/bg_side_toggle"
                android:theme="@style/SideBarLayout"
                android:gravity="center"
                android:text="@string/btn_tilt"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@+id/txtRobotStatus"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtRobotStatus"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/bg_side_btn"
                android:gravity="center"
                android:text="@string/btn_robotstatus"
                android:textSize="10sp"
                app:layout_constraintBottom_toTopOf="@+id/waypointbtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tiltbtn" />

            <ToggleButton
                android:id="@+id/waypointbtn"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/bg_side_toggle"
                android:textOff="@string/btn_waypoint_off"
                android:textOn="@string/btn_waypoint_on"
                android:theme="@style/SideBarLayout"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtRobotStatus" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <view
        android:id="@+id/idMapView"
        class="com.example.mdpgroup16.MapView"
        android:layout_width="450dp"
        android:layout_height="520dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>