<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#383e56"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context=".CommsTab">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#383e56"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp">

        <Button
            android:id="@+id/btnSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lvNewDevices"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/editText"
            android:layout_toRightOf="@+id/editText"
            android:background="@drawable/bg_com_btn"
            android:text="@string/send"
            android:textAllCaps="false"
            android:theme="@style/SideBarLayout" />

        <Button
            android:id="@+id/btnF1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nidText"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="170dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="177dp"
            android:background="@drawable/bg_com_btn"
            android:text="@string/btn_f1"
            android:textAllCaps="false"
            android:theme="@style/SideBarLayout" />

        <Button
            android:id="@+id/btnF2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnF1"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="170dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="177dp"
            android:background="@drawable/bg_com_btn"
            android:text="@string/btn_f2"
            android:textAllCaps="false"
            android:theme="@style/SideBarLayout" />

        <Button
            android:id="@+id/btnReconfigure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnF2"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="173dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="174dp"
            android:background="@drawable/bg_com_btn"
            android:text="@string/btn_reconfigure"
            android:theme="@style/SideBarLayout" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:hint="@string/enter_text_here"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF" />

        <ScrollView
            android:id="@+id/scrollViewForMessage"
            android:layout_width="fill_parent"
            android:layout_height="300dp"
            android:layout_below="@+id/editText"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="#FFFFFF"
            android:paddingLeft="10dp">

            <TextView
                android:id="@+id/incomingMessage"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="10dp"
                android:scrollbars="vertical"
                android:text="@string/incoming_messages" />

        </ScrollView>

        <TextView
            android:id="@+id/mdfStaticText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/scrollViewForMessage"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="MDFString:"
            android:textColor="#FFFFFF"
            android:textSize="16dp"
            android:theme="@style/SideBarLayout" />

        <TextView
            android:id="@+id/mdfText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/scrollViewForMessage"
            android:layout_marginStart="5dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="10dp"
            android:layout_toEndOf="@+id/mdfStaticText"
            android:background="#FFFFFF"
            android:text="000000000000000000000000000000000000000000000000000000000000000000000000000" />

        <TextView
            android:id="@+id/nidStaticText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mdfStaticText"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="10dp"
            android:text="NIDString:"
            android:textColor="#FFFFFF"
            android:textSize="16dp"
            android:theme="@style/SideBarLayout" />

        <TextView
            android:id="@+id/nidText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mdfText"
            android:layout_marginStart="13dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="10dp"
            android:layout_toEndOf="@+id/nidStaticText"
            android:background="#FFFFFF"
            android:text="-" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>